@@ -33,12 +33,18 @@ char* current_iface;
 #define CMDIF_IPADDR_ERROR() printError("Syntax error !\nCorrect syntax is:\n   ip address A.B.C.D M.A.S.K\n   ip address A.B.C.D/CIDR\n   ip address DHCP\n");
 #define CMDIF_SHUTDOWN_ERROR() printError("Syntax error !\nCorrect syntax is:\n   shutdown\n");
 #define CMDIF_NOSHUTDOWN_ERROR() printError("Syntax error !\nCorrect syntax is:\n   shutdown\n");
+#define CMDIF_ACCESS_LIST_ERROR() printError("Syntax error !\n Correct syntax is:\n   access-list <name> <in|out>\n");
 void cifCMD_exit(char* _none);
 
 // IP management
 void cifCMD_ip(char* args);
 void cifCMD_ip_address(char* args);
+void cifCMD_noip_address(char* args);
 
+// ACLS
+void cifCMD_access_list(char* args);
+
+// Interface Mgmt
 void cifCMD_shutdown(char* _none);
 void cifCMD_noshutdown(char* _none);
 
